更新方太世界水日

--- a/FotileShuijiao20170321/index.html
+++ b/FotileShuijiao20170321/index.html
@@ -30,7 +30,7 @@
 <audio preload id="die" class="die">
     <source src="img/die.mp3" type="audio/mpeg">
 </audio>
-<div class="ab page loading hidden ">
+<div class="ab page loading hidden">
     <div class="ab panzi1 ">
         <img class="ab " src="img/p0/1.png" alt="" />
     </div>
@@ -96,33 +96,10 @@
         <img src="img/p2/14.png" alt="" />
     </div>
     <div class=" p2_btn hide">
-        <img class="ab btn_8 animated fadeIn" src="img/p2/15.png" alt="" />
-        <img class="ab btn_9 animated fadeIn" src="img/p2/16.png" alt="" />
-        <img class="ab btn_10 animated fadeIn" src="img/p2/17.png" alt="" />
-    </div>
-    <div class="ab page haibao hide">
-        <img class="ab p2_delete" src="img/p2/21.png" alt=""/>
-
-        <canvas style="font-family: AR-NewHeiGB-U" id="p2_canvas_2" class="ab "></canvas>
-        <div class="saveImg ab" id="showImg">
-            <img id="img" src="" alt="">
-        </div>
-        <div class="ab long_tap">
-            <img src="img/p2/23.png" alt=""/>
-        </div>
-        <!--<div class="ab p2_center_bg">
-            <img src="img/p2/18.png" alt=""/>
-            <div class="ab p2_center_name">
-                <img class="ab my3 my1 my4" src="img/p1/6.png" alt=""/>
-                <img class="ab my3 my2 my5 hide" src="img/p1/7.png" alt=""/>
-                <span id="zz" class="wdxzh ab _color hidden " style="font-family: AR-NewHeiGB-U">水槽 先碗机</span>
-            </div>
-            <img class="ab p2_center_er" src="img/p2/19.png" alt=""/>
-            <img class="ab p2_center_words" src="img/p2/20.png" alt=""/>
-        </div>-->
+        <img class="ab btn_9 animated fadeIn" src="img/p2/9.png" alt="" />
+        <img class="ab btn_10 animated fadeIn" src="img/p2/10.png" alt="" />
     </div>
 </div>
-
 <div class="ab page p3  hide">
     <div class="fx page hidden p3_3">
         <div class="fx logo">
@@ -152,8 +129,7 @@
             <div class="ab tizi">
                 <img src="img/p3/5.png" alt="" />
             </div>
-            <div class="ab p3_percent">
-                <span id="_active_percent">0</span>
+            <div class="ab p3_percent"> <span id="_active_percent">00</span>
                 <span class="p3_percent_1">%</span>
             </div>
             <p class="font0 eee ab wx">微信用户 <span id="p3_wx">123213</span> 位</p>
