增加清明招聘

--- a/FotileShuijiao20170321/index2.html
+++ b/FotileShuijiao20170321/index2.html
@@ -100,7 +100,8 @@
         <img class="ab btn_9 animated fadeIn" src="img/p2/16.png" alt="" />
         <img class="ab btn_10 animated fadeIn" src="img/p2/17.png" alt="" />
     </div>
-    <div class="ab page haibao hide">
+    <div class="ab page haibao hide animated fadeIn">
+        <img class="ab" src="img/p2/24.png" alt=""/>
         <img class="ab p2_delete" src="img/p2/21.png" alt=""/>
 
         <canvas style="font-family: AR-NewHeiGB-U" id="p2_canvas_2" class="ab "></canvas>
