--- a/FotileShuijiao20170321/last.html
+++ b/FotileShuijiao20170321/last.html
@@ -30,7 +30,7 @@
 <audio preload id="die" class="die">
     <source src="img/die.mp3" type="audio/mpeg">
 </audio>
-<div class="ab page loading hidden">
+<div class="ab page loading hidden ">
     <div class="ab panzi1 ">
         <img class="ab " src="img/p0/1.png" alt="" />
     </div>
@@ -253,7 +253,7 @@
 <script src="js/jweixin-1.0.0.js"></script>
 <script src="js/share.js?v=201703171"></script>
 <script src="js/touch.js"></script>
-<script src="js/main2.js?v=20170318"></script>
+<script src="js/last.js?v=20170318"></script>
 <script>
     var _mtac = {};
     (function() {
