--- a/FotileShuijiao20170321/wechat.html
+++ b/FotileShuijiao20170321/wechat.html
@@ -96,9 +96,33 @@
         <img src="img/p2/14.png" alt="" />
     </div>
     <div class=" p2_btn hide">
-        <img class="ab btn_9 animated fadeIn" style="left:5.15rem;" src="img/p2/9.png" alt="" />
+        <img class="ab btn_8 animated fadeIn" style="left:2rem;transform: scale(1.1)" src="img/p2/15.png" alt="" />
+        <img class="ab btn_9 animated fadeIn" style="left:8rem;" src="img/p2/9.png" alt="" />
+    </div>
+    <div class="ab page haibao hide animated fadeIn">
+        <img class="ab" src="img/p2/24.png" alt=""/>
+        <img class="ab p2_delete" src="img/p2/21.png" alt=""/>
+
+        <canvas style="font-family: AR-NewHeiGB-U" id="p2_canvas_2" class="ab "></canvas>
+        <div class="saveImg ab" id="showImg">
+            <img id="img" src="" alt="">
+        </div>
+        <div class="ab long_tap">
+            <img src="img/p2/23.png" alt=""/>
+        </div>
+        <!--<div class="ab p2_center_bg">
+            <img src="img/p2/18.png" alt=""/>
+            <div class="ab p2_center_name">
+                <img class="ab my3 my1 my4" src="img/p1/6.png" alt=""/>
+                <img class="ab my3 my2 my5 hide" src="img/p1/7.png" alt=""/>
+                <span id="zz" class="wdxzh ab _color hidden " style="font-family: AR-NewHeiGB-U">水槽 先碗机</span>
+            </div>
+            <img class="ab p2_center_er" src="img/p2/19.png" alt=""/>
+            <img class="ab p2_center_words" src="img/p2/20.png" alt=""/>
+        </div>-->
     </div>
 </div>
+
 <div class="ab page p3  hide">
     <div class="fx page hidden p3_3">
         <div class="fx logo">
