--- a/Everbright-Yango/busiNess/busiNess.html
+++ b/Everbright-Yango/busiNess/busiNess.html
@@ -38,8 +38,8 @@
                 <div class="ab upthree">
 
                 </div>
-                <li><a href="../aboutUs/aboutUs.html">关于我们</a></li>
                 <li><a href="../index.html">公司新闻</a></li>
+                <li><a href="../aboutUs/aboutUs.html">关于我们</a></li>
                 <li><a href="javascript:void(0)" class="color_white">主营业务</a></li>
                 <li><a href="../layOut/layOut.html">业务布局</a></li>
                 <li><a href="../recruiTment/recruiTment.html">企业招聘</a></li>
@@ -152,9 +152,10 @@
             <div class="re center_box center_box2 banner-container">
                 <div class="col-sm-9 padding_0">
                     <div class="footleft">
-                        <a href="../aboutUs/aboutUs.html">关于我们&nbsp;|</a>
-                        <a href="../index.html">&nbsp;最新新闻&nbsp;|</a>
-                        <a href="javascript:void(0)">&nbsp;业务主营&nbsp;|</a>
+                        <a href="../index.html">最新新闻&nbsp;|</a>
+                        <a href="../aboutUs/aboutUs.html">&nbsp;关于我们&nbsp;|</a>
+                        <a href="#">&nbsp;业务主营&nbsp;|</a>
+                        <a href="../layOut/layOut.html">&nbsp;业务布局&nbsp;|</a>
                         <a href="../recruiTment/recruiTment.html">&nbsp;诚聘人才&nbsp;|</a>
                         <a href="../contactUs/contactUs.html">&nbsp;联系我们</a>
                     </div>
