--- a/Everbright-Yango/index.html
+++ b/Everbright-Yango/index.html
@@ -37,8 +37,8 @@
                 <div class="ab upthree">
 
                 </div>
-                <li><a href="aboutUs/aboutUs.html">关于我们</a></li>
                 <li><a href="javascript:void(0)" class="color_white">公司新闻</a></li>
+                <li><a href="aboutUs/aboutUs.html">关于我们</a></li>
                 <li><a href="busiNess/busiNess.html">主营业务</a></li>
                 <li><a href="layOut/layOut.html">业务布局</a></li>
                 <li><a href="recruiTment/recruiTment.html">企业招聘</a></li>
@@ -139,17 +139,21 @@
     </div>
     <div class="row">
         <div class="col-sm-6 ">
-            <img src="img/p1/news1.jpg" alt=""/>
+            <a href="javascript:void(0)">
+                <img src="img/p1/news1.jpg" alt=""/>
+            </a>
             <h4 class="newsSontitle">标题1</h4>
         </div>
         <div class="col-sm-6 ">
-            <img src="img/p1/news2.jpg" alt=""/>
+            <a href="javascript:void(0)">
+                <img src="img/p1/news2.jpg" alt=""/>
+            </a>
             <h4 class="newsSontitle">标题2</h4>
         </div>
     </div>
     <div class="re newsMore">
         <img src="img/p1/newsMore.png" alt=""/>
-        <a href="#">
+        <a href="javascript:void(0)">
             <div class="ab pic_top_box">
             </div>
         </a>
@@ -164,9 +168,10 @@
             <div class="re center_box center_box2 banner-container">
                 <div class="col-sm-9 padding_0">
                     <div class="footleft">
-                        <a href="aboutUs/aboutUs.html">关于我们&nbsp;|</a>
-                        <a href="javascript:void(0)">&nbsp;最新新闻&nbsp;|</a>
+                        <a href="#">最新新闻&nbsp;|</a>
+                        <a href="aboutUs/aboutUs.html">&nbsp;关于我们&nbsp;|</a>
                         <a href="busiNess/busiNess.html">&nbsp;业务主营&nbsp;|</a>
+                        <a href="layOut/layOut.html">&nbsp;业务布局&nbsp;|</a>
                         <a href="recruiTment/recruiTment.html">&nbsp;诚聘人才&nbsp;|</a>
                         <a href="contactUs/contactUs.html">&nbsp;联系我们</a>
                     </div>
