--- a/Everbright-Yango/recruiTment/recruiTment.html
+++ b/Everbright-Yango/recruiTment/recruiTment.html
@@ -38,8 +38,8 @@
                 <div class="ab upthree">
 
                 </div>
-                <li><a href="../aboutUs/aboutUs.html" >关于我们</a></li>
                 <li><a href="../index.html">公司新闻</a></li>
+                <li><a href="../aboutUs/aboutUs.html">关于我们</a></li>
                 <li><a href="../busiNess/busiNess.html">主营业务</a></li>
                 <li><a href="../layOut/layOut.html">业务布局</a></li>
                 <li><a href="javascript:void(0)" class="color_white">企业招聘</a></li>
@@ -118,25 +118,33 @@
     </div>
     <div class="row">
         <div class="col-sm-6 ">
-            <img src="../img/p5/Pic1.jpg" alt=""/>
-            <h4 class="newsSontitle text-center">年保障金及奖金</h4>
+            <a href="javascript:void(0)">
+                <img src="../img/p5/Pic1.jpg" alt=""/>
+            </a>
+            <h4 class="newsSontitle ">年保障金及奖金</h4>
         </div>
         <div class="col-sm-6 ">
-            <img src="../img/p5/Pic2.jpg" alt=""/>
-            <h4 class="newsSontitle text-center">利益分享与投资机会</h4>
+            <a href="javascript:void(0)">
+                <img src="../img/p5/Pic2.jpg" alt=""/>
+            </a>
+            <h4 class="newsSontitle ">利益分享与投资机会</h4>
         </div>
         <div class="col-sm-6 ">
-            <img src="../img/p5/Pic3.jpg" alt=""/>
-            <h4 class="newsSontitle text-center">身心健康</h4>
+            <a href="javascript:void(0)">
+                <img src="../img/p5/Pic3.jpg" alt=""/>
+            </a>
+            <h4 class="newsSontitle ">身心健康</h4>
         </div>
         <div class="col-sm-6 ">
-            <img src="../img/p5/Pic4.jpg" alt=""/>
-            <h4 class="newsSontitle text-center">医疗、保险和其他福利</h4>
+            <a href="javascript:void(0)">
+                <img src="../img/p5/Pic4.jpg" alt=""/>
+            </a>
+            <h4 class="newsSontitle ">医疗、保险和其他福利</h4>
         </div>
     </div>
     <div class="newsMore re">
         <img src="../img/p4/p4Btn.png" alt=""/>
-        <a href="#">
+        <a href="javascript:void(0)">
             <div class="ab pic_top_box">
             </div>
         </a>
@@ -161,10 +169,11 @@
             <div class="re center_box center_box2 banner-container">
                 <div class="col-sm-9 padding_0">
                     <div class="footleft">
-                        <a href="../aboutUs/aboutUs.html">关于我们&nbsp;|</a>
-                        <a href="../index.html">&nbsp;最新新闻&nbsp;|</a>
+                        <a href="../index.html">最新新闻&nbsp;|</a>
+                        <a href="../aboutUs/aboutUs.html">&nbsp;关于我们&nbsp;|</a>
                         <a href="../busiNess/busiNess.html">&nbsp;业务主营&nbsp;|</a>
-                        <a href="javascript:void(0)">&nbsp;诚聘人才&nbsp;|</a>
+                        <a href="../layOut/layOut.html">&nbsp;业务布局&nbsp;|</a>
+                        <a href="#">&nbsp;诚聘人才&nbsp;|</a>
                         <a href="../contactUs/contactUs.html">&nbsp;联系我们</a>
                     </div>
                     <p>
