--- a/Everbright-Yango/contactUs/contactUs.html
+++ b/Everbright-Yango/contactUs/contactUs.html
@@ -38,8 +38,8 @@
                 <div class="ab upthree">
 
                 </div>
-                <li><a href="../aboutUs/aboutUs.html" >关于我们</a></li>
                 <li><a href="../index.html">公司新闻</a></li>
+                <li><a href="../aboutUs/aboutUs.html">关于我们</a></li>
                 <li><a href="../busiNess/busiNess.html">主营业务</a></li>
                 <li><a href="../layOut/layOut.html">业务布局</a></li>
                 <li><a href="../recruiTment/recruiTment.html">企业招聘</a></li>
@@ -147,17 +147,21 @@
     </div>
     <div class="row">
         <div class="col-sm-6 ">
-            <img src="../img/p1/news1.jpg" alt=""/>
-            <h4 class="newsSontitle text-center">企业主要岗位</h4>
+            <a href="javascript:void(0)">
+                <img src="../img/p1/news1.jpg" alt=""/>
+            </a>
+            <h4 class="newsSontitle ">企业主要岗位</h4>
         </div>
         <div class="col-sm-6 ">
-            <img src="../img/p1/news2.jpg" alt=""/>
-            <h4 class="newsSontitle text-center">立即加入我们</h4>
+            <a href="javascript:void(0)">
+                <img src="../img/p1/news2.jpg" alt=""/>
+            </a>
+            <h4 class="newsSontitle ">立即加入我们</h4>
         </div>
     </div>
     <div class="newsMore re">
         <img src="../img/p6/p6Btn.png" alt=""/>
-        <a href="#">
+        <a href="../recruiTment/recruiTment.html">
             <div class="ab pic_top_box">
             </div>
         </a>
@@ -171,11 +175,12 @@
             <div class="re center_box center_box2 banner-container">
                 <div class="col-sm-9 padding_0">
                     <div class="footleft">
-                        <a href="../aboutUs/aboutUs.html">关于我们&nbsp;|</a>
-                        <a href="../index.html">&nbsp;最新新闻&nbsp;|</a>
+                        <a href="../index.html">最新新闻&nbsp;|</a>
+                        <a href="../aboutUs/aboutUs.html">&nbsp;关于我们&nbsp;|</a>
                         <a href="../busiNess/busiNess.html">&nbsp;业务主营&nbsp;|</a>
+                        <a href="../layOut/layOut.html">&nbsp;业务布局&nbsp;|</a>
                         <a href="../recruiTment/recruiTment.html">&nbsp;诚聘人才&nbsp;|</a>
-                        <a href="javascript:void(0)">&nbsp;联系我们</a>
+                        <a href="#">&nbsp;联系我们</a>
                     </div>
                     <p>
                         <span class="p_text">
